--- a/index.html
+++ b/index.html
@@ -82,18 +82,169 @@
                 <h2 class="text-center"><i class="fas fa-arrow-circle-down" aria-hidden="true"></i></h2>
             </div>
         </section>
-    </div>
-    <!-- box fix -->
+        <section style="background: rgb(225, 225, 225);" class="sobre">
+            <div class="container">
+                <div class="row">
 
-    <!-- chamada -->
+                    <div class="col-md-12">
+                        <div class="custom-title">
+                            <div></div>
+                            <h2>Sobre</h2>
+                        </div>
+                        <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
+                            specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheetscontaining Lorem Ipsum
+                            passages, and more</p>
+                        <div class="text-center"><button type="button" style="background: #3fa3c5;" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Saiba mais</button>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">Minha Historia</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+                        </button>
+                        </div>
+                        <div class="modal-body">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has
+                            survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more
+                            recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
+        <section class="diferenciais">
+            <div class="container">
+                <div class="custom-title">
+                    <div></div>
+                    <h2 style="border-bottom:0 ;">Nossos diferenciais</h2>
+                </div>
+                <div class="row">
+                    <div class="col-md-4 text-center">
+                        <h2><i class="fa fa-user"></i></h2>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
+                            specimen book. It has</p>
+                    </div>
+                    <div class="col-md-4 text-center">
+                        <h2><i class="fa fa-bell"></i></h2>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
+                            specimen book. It has</p>
+                    </div>
+                    <div class="col-md-4 text-center">
+                        <h2><i class="fa fa-coffee"></i></h2>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
+                            specimen book. It has</p>
+                    </div>
+
+                </div>
+                <!-- row -->
+            </div>
+            <!-- container -->
+        </section>
+        <!-- diferenciais -->
+
+        <!-- sobre -->
+        <section class="convite">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 text-center">
+                        <h2><i class="fa fa-coffee"></i>Participe da nossa lista</h2>
+                    </div>
+                    <!-- md6 -->
+                    <div class="col-md-6 text-center">
+                        <form>
+                            <div class="form-group">
+                                <input type="email" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                                <button type="submit" class="btn btn-primary">Entrar</button>
+                        </form>
+                        </div>
+                    </div>
+                    <!-- row -->
+                </div>
+                <!-- container -->
+        </section>
+        <!-- convite -->
+        <section class="contato">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="custom-title">
+                            <div></div>
+                            <h2>Fale conosco</h2>
+                        </div>
+                        <form>
+                            <div class="form-group">
+                                <label>Nome</label>
+                                <input type="nome" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <label>Email</label>
+                                <input type="email" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <label>Sua mensagem</label>
+                                <textarea class="form-control"></textarea>
+                            </div>
+                            <button style="background: #3fa3c5;" type="submit" class="btn btn-primary">enviar</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class=" col-md-6 ">
+                        <h2>Minha Historia</h2>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
+                            specimen book. It has</p>
+
+                    </div>
+                    <div class="col-md-3">
+                        <h2>Rede Sociais</h2>
+                        <div class="group-btn">
+                            <a href=""><i class="fab fa-facebook-f"></i></a>
+                            <a href=""><i class="fab fa-instagram"></i></a>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <h2>Links Uteis</h2>
+                        <ul>
+                            <li><a href="">link1</a></li>
+                            <li><a href="">link2</a></li>
+                            <li><a href="">link3</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </footer>
+        <footer class="text-center" style="background: #444;">
+            <p>todos os direitos reservados</p>
+        </footer>
+        </div>
+        <!-- box fix -->
+
+        <!-- chamada -->
 
 
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <!-- Optional JavaScript -->
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 
 </html>
